[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmon"
version = "0.1.0.dev0"
description = "Dependency-aware network monitoring daemon (Python rewrite of the 1998 C sysmon)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "IjonTichy1970" }]
keywords = ["monitoring", "network", "icmp", "ping", "daemon", "sysmon"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "dnspython>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/IjonTichy1970/Sysmon"
Issues = "https://github.com/IjonTichy1970/Sysmon/issues"

[project.scripts]
sysmon = "sysmon.__main__:main"

[tool.setuptools.packages.find]
include = ["sysmon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
