[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "psysmon"
version = "0.10.0"
description = "PSYSMON — dependency-aware network monitoring daemon (Python rewrite of the C sysmon by Jared Mauch, v0.93)"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-2.0-or-later"
authors = [{ name = "IjonTichy1970" }]
keywords = ["monitoring", "network", "icmp", "ping", "daemon", "psysmon", "sysmon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "dnspython>=2.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]
# Build-only: rendering the end-user guide (tools/build_guide.py). Not a runtime dependency.
docs = [
    "markdown>=3.5",
]

[project.urls]
Homepage = "https://github.com/IjonTichy1970/Psysmon"
Issues = "https://github.com/IjonTichy1970/Psysmon/issues"

[project.scripts]
psysmon = "psysmon.__main__:main"
psysmon-convert = "psysmon.config.convert:main"
psysmonctl = "psysmon.control.client:main"
psysmon-token = "psysmon.control.token:main"

[tool.setuptools.packages.find]
include = ["psysmon*"]

[tool.setuptools.package-data]
"psysmon.assets" = ["*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
